--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Assistant Chat</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        background-color: #121212;
-        color: #ffffff;
-      }
-      .message-container {
-        height: 200px;
-        overflow-y: scroll;
-        border: 1px solid #444;
-        padding: 10px;
-        margin-bottom: 15px;
-      }
-      .message.user {
-        color: #0dcaf0;
-      }
-      .message.assistant {
-        color: #ffc107;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container my-5">
-      <h1 class="text-center">Assistant Chat</h1>
-
-      <!-- Assistant Selection -->
-      <div class="mb-3">
-        <label for="assistantSelect" class="form-label">Select Assistant</label>
-        <input
-          id="assistant_name"
-          type="text"
-          value="asst_2JWXaEmwhgVBotP0QDjH9Dbm"
-        />
-        <button
-          id="get_assistant"
-          class="btn btn-primary"
-          onclick="getAssistant()"
-        >
-          Get Assistant
-        </button>
-      </div>
-
-      <!-- Create New Thread Button -->
-      <div class="mb-3">
-        <button id="newThreadBtn" class="btn btn-primary" onclick="getThread()">
-          Create New Thread
-        </button>
-      </div>
-
-      <!-- Message Display -->
-      <div class="message-container" id="message-container"></div>
-
-      <!-- Message Input -->
-      <div class="input-group mb-3">
-        <button id="sendBtn" class="btn btn-success" onclick="getResponse()">
-          Send
-        </button>
-        <input
-          type="text"
-          id="messageInput"
-          class="form-control"
-          placeholder="Type your message..."
-        />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OpenAI Chatbot</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #343a40;
+      color: white;
+    }
+    .user-message {
+      color: #007bff;
+    }
+    .assistant-message {
+      color: #28a745;
+    }
+  </style>
+</head>
+<body>
+  <div class="container mt-5">
+    <h1 class="text-center">OpenAI Chatbot</h1>
+    <div class="card bg-dark text-white">
+      <div class="card-body">
+        <div id="messages" class="mb-3" style="height: 300px; overflow-y: scroll;"></div>
+        <form id="chat-form">
+          <div class="input-group">
+            <input type="text" id="user-input" class="form-control" placeholder="Ask a question...">
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="submit">Send</button>
+            </div>
+          </div>
+        </form>
+        <div class="mt-3">
+          <button id="show-assistant-id" class="btn btn-secondary">Show Assistant ID</button>
+          <button id="show-assistant-name" class="btn btn-secondary">Show Assistant Name</button>
+          <button id="show-state" class="btn btn-secondary">Show State</button>
+        </div>
+        <div id="info" class="mt-3"></div>
       </div>
     </div>
+  </div>
+  <script>
+    document.getElementById('chat-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const userInput = document.getElementById('user-input').value;
+      if (!userInput) return;
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom Script -->
-    <script src="scripts.js"></script>
-  </body>
+      // Add user message to the state and display it
+      addMessage('user', userInput);
+
+      // Send user message to the server
+      await fetch('/api/messages', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ role: 'user', content: userInput }),
+      });
+
+      // Run the assistant
+      await fetch('/api/run', {
+        method: 'POST',
+      });
+
+      // Poll for the assistant's response
+      let assistantMessage = null;
+      while (!assistantMessage) {
+        const response = await fetch('/api/messages');
+        const messages = await response.json();
+        assistantMessage = messages.find(msg => msg.role === 'assistant');
+        if (!assistantMessage) {
+          await new Promise(resolve => setTimeout(resolve, 1000)); // Wait for 1 second before polling again
+        }
+      }
+
+      // Display the assistant's response
+      addMessage('assistant', assistantMessage.content);
+    });
+
+    function addMessage(role, content) {
+      const messagesDiv = document.getElementById('messages');
+      const messageDiv = document.createElement('div');
+      messageDiv.classList.add(role === 'user' ? 'user-message' : 'assistant-message');
+      messageDiv.textContent = content;
+      messagesDiv.appendChild(messageDiv);
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+    }
+
+    document.getElementById('show-assistant-id').addEventListener('click', () => {
+      displayInfo(`Assistant ID: ${state.assistant_id}`);
+    });
+
+    document.getElementById('show-assistant-name').addEventListener('click', () => {
+      displayInfo(`Assistant Name: ${state.assistant_name}`);
+    });
+
+    document.getElementById('show-state').addEventListener('click', () => {
+      displayInfo(`State: ${JSON.stringify(state, null, 2)}`);
+    });
+
+    function displayInfo(info) {
+      const infoDiv = document.getElementById('info');
+      infoDiv.textContent = info;
+    }
+
+    // State dictionary
+    const state = {
+      assistant_id: 'asst_mKubPnoRJxz3sL90FRE9NEZH',
+      assistant_name: 'BankTest',
+      threadId: null,
+      messages: [],
+    };
+  </script>
+</body>
 </html>
