greyed out buttons while function is running

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <form id="assistantForm">
       <div class="mb-3">
-        <button type="button" id="newThreadButton" class="btn btn-secondary">New Thread</button>
+        <button type="button" id="newThreadButton" class="btn btn-primary">New Thread</button>
       </div>
       <div class="mb-3">
         <label for="user_prompt" class="form-label">Your Question</label>
