--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
   <title>AI Assistant</title>
+  <style>
+    #chatWindow {
+      height: 300px;
+      overflow-y: scroll;
+      border: 1px solid #ccc;
+      background-color: #222;
+      color: #fff;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body class="bg-dark text-light">
   <div class="container mt-5">
     <h1 class="text-center">AI Assistant Chat</h1>
-    
-    <!-- Display Thread ID, Assistant ID, and Assistant Name -->
+
+    <!-- Assistant Info Section -->
     <div class="mb-3">
-      <strong>Thread ID:</strong> <span id="threadId">Not started</span> <br>
-      <strong>Assistant ID:</strong> <span id="assistantId">asst_mKubPnoRJxz3sL90FRE9NEZH</span> <br>
-      <strong>Assistant Name:</strong> <span id="assistantName">AI Assistant</span>
+      <strong>Thread ID:</strong> <span id="threadId"></span><br>
+      <strong>Assistant ID:</strong> <span id="assistantId"></span><br>
+      <strong>Assistant Name:</strong> <span id="assistantName"></span>
     </div>
 
     <form id="assistantForm">
       <div class="mb-3">
-        <button type="button" id="newThreadButton" class="btn btn-primary">New Thread</button>
+        <button type="button" id="newThreadButton" class="btn btn-secondary" disabled>New Thread</button>
+        <button type="button" id="chooseAssistantButton" class="btn btn-secondary">Select Assistant</button>
       </div>
       <div class="mb-3">
         <label for="user_prompt" class="form-label">Your Question</label>
-        <input type="text" class="form-control" id="user_prompt" placeholder="Enter your question">
+        <input type="text" class="form-control" id="user_prompt" placeholder="Enter your question" disabled>
       </div>
-      <button type="submit" class="btn btn-primary">Ask Assistant</button>
+      <button type="submit" class="btn btn-secondary" id="askAssistantButton" disabled>Ask Assistant</button>
     </form>
 
     <div id="chatWindow" class="mt-5">
@@ -37,6 +47,27 @@
     </div>
   </div>
 
-  <script src="script.js"></script> <!-- Link to the JavaScript file -->
+  <!-- Modal for Choosing a Different Assistant -->
+  <div class="modal fade" id="assistantModal" tabindex="-1" aria-labelledby="assistantModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="assistantModalLabel">Choose a Different Assistant</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div id="assistantList">
+            <!-- Assistant options will be populated here -->
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script> <!-- Include your script.js file -->
 </body>
 </html>
