Changed assistant list text to be black. Working but UI could be improved with the button selection and direction to end users

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       color: #fff;
       padding: 10px;
     }
+    
+    /* New CSS for the assistant list */
+    #assistantList li {
+      color: black; /* Set the text color to black */
+    }
   </style>
 </head>
 <body class="bg-dark text-light">
