--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <title>AI Assistant</title>
+  <title>Em's AI Assistant Frontpage</title>
   <style>
     #chatWindow {
-      height: 300px;
-      overflow-y: scroll;
-      border: 1px solid #ccc;
-      background-color: #222;
-      color: #fff;
-      padding: 10px;
-    }
-    
-    /* New CSS for the assistant list */
-    #assistantList li {
-      color: black; /* Set the text color to black */
-    }
+  height: 300px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  background-color: #222;
+  color: #fff;
+  padding: 10px;
+}
+
+/* Style for enabled buttons (blue background) */
+button:enabled {
+  background-color: blue;
+  color: white;
+}
+
+/* Style for disabled buttons (grey background) */
+button:disabled {
+  background-color: grey;
+  color: white;
+}
+
+/* New CSS for the assistant list */
+#assistantList li {
+  color: black; /* Set the text color to black */
+}
   </style>
 </head>
 <body class="bg-dark text-light">
   <div class="container mt-5">
-    <h1 class="text-center">AI Assistant Chat</h1>
+    <h1 class="text-center">Em's AI Assistant Frontpage</h1>
 
     <div id="assistantInfo" class="mb-3">
       <p>Assistant ID: <span id="assistant_id" class="text-info">Not selected</span></p>
