--- a/public/index.html
+++ b/public/index.html
@@ -7,84 +7,95 @@
   <title>Em's AI Assistant Frontpage</title>
   <style>
     #chatWindow {
-  height: 300px;
-  overflow-y: scroll;
-  border: 1px solid #ccc;
-  background-color: #222;
-  color: #fff;
-  padding: 10px;
-}
+      height: 300px;
+      overflow-y: scroll;
+      border: 1px solid #ccc;
+      background-color: #222;
+      color: #fff;
+      padding: 10px;
+    }
 
-/* Style for enabled buttons (blue background) */
-button:enabled {
-  background-color: blue;
-  color: white;
-}
+    /* Style for enabled buttons (blue background) */
+    button:enabled {
+      background-color: blue;
+      color: white;
+    }
 
-/* Style for disabled buttons (grey background) */
-button:disabled {
-  background-color: grey;
-  color: white;
-}
+    /* Style for disabled buttons (grey background) */
+    button:disabled {
+      background-color: grey;
+      color: white;
+    }
 
-  /* Style for the assistant items in the modal */
-#assistantList .assistant-item {
-    padding: 10px;
-    background-color: #f8f9fa; /* Light background so the text stands out */
-    border: 1px solid #ccc;
-    margin-bottom: 5px;
-    cursor: pointer;
-    color: black; /* Ensure the text is always black */
-}
+    /* Style for the assistant items in the modal */
+    #assistantList .assistant-item {
+      padding: 10px;
+      background-color: #f8f9fa; /* Light background so the text stands out */
+      border: 1px solid #ccc;
+      margin-bottom: 5px;
+      cursor: pointer;
+      color: black; /* Ensure the text is always black */
+    }
 
-/* Hover effect to change background or other effects, but keep text black */
-#assistantList .assistant-item:hover {
-    background-color: #e2e6ea; /* Slightly darker background on hover */
-    color: black; /* Keep the text black even on hover */
-}
+    /* Hover effect to change background or other effects, but keep text black */
+    #assistantList .assistant-item:hover {
+      background-color: #e2e6ea; /* Slightly darker background on hover */
+      color: black; /* Keep the text black even on hover */
+    }
 
-
-
+     /* Common color for Assistant ID, Name, and Thread ID */
+    #textInfo .text-info {
+    color:#e245d0; 
+  }
   </style>
 </head>
 <body class="bg-dark text-light">
   <div class="container mt-5">
     <h1 class="text-center">Em's AI Assistant Frontpage</h1>
 
-    <div id="assistantInfo" class="mb-3">
-      <p>Assistant ID: <span id="assistant_id" class="text-info">Not selected</span></p>
-      <p>Assistant Name: <span id="assistant_name" class="text-info">Not selected</span></p>
-      <p>Thread ID: <span id="thread_id" class="text-info">Not created</span></p>
+    <!-- Row to hold the left and right sections -->
+    <div class="row">
+      <!-- Left column for assistant info and user prompt form -->
+      <div class="col-md-6">
+        <div id="assistantInfo" class="mb-3">
+          <p>Assistant ID: <span id="assistant_id" class="text-info">Not selected</span></p>
+          <p>Assistant Name: <span id="assistant_name" class="text-info">Not selected</span></p>
+          <p>Thread ID: <span id="thread_id" class="text-info">Not created</span></p>
+        </div>
+
+        <form id="assistantForm">
+          <div class="mb-3">
+            <button type="button" id="selectAssistantButton" class="btn btn-secondary" enabled>Select Assistant</button>
+            <button type="button" id="newThreadButton" class="btn btn-secondary" disabled>New Thread</button>
+          </div>
+          <div class="mb-3">
+            <label for="user_prompt" class="form-label">Your Question</label>
+            <input type="text" class="form-control" id="user_prompt" placeholder="Enter your question" disabled>
+          </div>
+          <button type="submit" class="btn btn-secondary" disabled>Ask Assistant</button>
+        </form>
+      </div>
+
+      <!-- Right column for usage instructions -->
+      <div class="col-md-6">
+        <div id="usageInstructions" class="mb-3">
+          <h2>How to Use This Webpage</h2>
+          <p>To interact with an AI Assistant, follow these steps:</p>
+          <ol>
+            <li>Click "Select Assistant" to open a popup that lists all assistants available to you.</li>
+            <li>Click on the assistant name to select it.</li>
+            <li>Click "Close" to close the popup.</li>
+            <li>Click "New Thread" to create a new conversation thread with the selected assistant.</li>
+            <li>Enter your message in the input field.</li>
+            <li>Click the "Send" button to submit your message.</li>
+            <li>Wait for the assistant's response, which will appear in the chat window.</li>
+          </ol>
+          <p>If you encounter any issues, please refresh the page or try again later.</p>
+        </div>
+      </div>
     </div>
 
-    <!-- Added text block describing how to use the webpage -->
-    <div id="usageInstructions" class="mb-3">
-      <h2>How to Use This Webpage</h2>
-      <p>To interact with an AI Assistant, follow these steps:</p>
-      <ol>
-        <li>Click "Select Assistant" to open a popup that lists all assistants available to you.</li>
-        <li>Click on the assistant name to select it.</li>
-        <li>Click "Close" to close the popup.</li>
-        <li>Click "New Thread" to create a new conversation thread with the selected assistant.</li>
-        <li>Enter your message in the input field.</li>
-        <li>Click the "Send" button to submit your message.</li>
-        <li>Wait for the assistant's response, which will appear in the chat window.</li>
-      </ol>
-      <p>If you encounter any issues, please refresh the page or try again later.</p>
-    </div>
-
-    <form id="assistantForm">
-      <div class="mb-3">
-        <button type="button" id="selectAssistantButton" class="btn btn-secondary" enabled>Select Assistant</button>
-        <button type="button" id="newThreadButton" class="btn btn-secondary" disabled>New Thread</button>
-      </div>
-      <div class="mb-3">
-        <label for="user_prompt" class="form-label">Your Question</label>
-        <input type="text" class="form-control" id="user_prompt" placeholder="Enter your question" disabled>
-      </div>
-      <button type="submit" class="btn btn-secondary" disabled>Ask Assistant</button>
-    </form>
-
+    <!-- Chat window spanning both left and right columns -->
     <div id="chatWindow" class="mt-5">
       <h4>Conversation</h4>
       <div id="chatMessages">
@@ -94,25 +105,24 @@ button:disabled {
   </div>
 
   <!-- Modal for selecting an assistant -->
-<div class="modal fade" id="assistantModal" tabindex="-1" role="dialog" aria-labelledby="assistantModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="assistantModalLabel">Select Assistant</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div id="assistantList"></div> <!-- Changed from <ul> to <div> -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  <div class="modal fade" id="assistantModal" tabindex="-1" role="dialog" aria-labelledby="assistantModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="assistantModalLabel">Select Assistant</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="assistantList"></div> <!-- Changed from <ul> to <div> -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
