corrected button labels from the webpage instructions list

--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,9 @@
           <ol>
             <li>Click "Select Assistant" to open a popup that lists all assistants available to you.</li>
             <li>Click on the assistant name to select it.</li>
-            <li>Click "Close" to close the popup.</li>
             <li>Click "New Thread" to create a new conversation thread with the selected assistant.</li>
             <li>Enter your message in the input field.</li>
-            <li>Click the "Send" button to submit your message.</li>
+            <li>Click the "Ask Assistant" button to submit your message.</li>
             <li>Wait for the assistant's response, which will appear in the chat window.</li>
           </ol>
           <p>If you encounter any issues, please refresh the page or try again later.</p>
